welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:6: error: ';' expected but 'else' found.
	else if(die1==6 || die2==6) return die1+die2-5
        ^